--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "packageManager": "yarn@3.2.3",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build",
+    "lint": "eslint"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -14,6 +15,10 @@
   "devDependencies": {
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "^8.23.0",
+    "eslint-plugin-react": "latest",
     "parcel": "^2.7.0",
     "process": "^0.11.10",
     "typescript": "^4.8.2"
